@@ -53,13 +53,20 @@ func (l *ackLoop) run() {
 			count, events := lst.count()
 			l.lst.concat(&lst)
 
-			// log.Debugf("ackloop: scheduledACKs count=%v events=%v\n", count, events)
+			// log.Debug("ACK List:")
+			// for current := l.lst.head; current != nil; current = current.next {
+			// 	log.Debugf("  ack entry(seq=%v, start=%v, count=%v",
+			// 		current.seq, current.start, current.count)
+			// }
+
 			l.batchesSched += uint64(count)
 			l.totalSched += uint64(events)
 
 		case <-l.sig:
 			acked += l.handleBatchSig()
-			acks = l.broker.acks
+			if acked > 0 {
+				acks = l.broker.acks
+			}
 		}
 
 		// log.Debug("ackloop INFO")
@@ -87,12 +94,14 @@ func (l *ackLoop) handleBatchSig() int {
 		count += current.count
 	}
 
-	if e := l.broker.eventer; e != nil {
-		e.OnACK(count)
-	}
+	if count > 0 {
+		if e := l.broker.eventer; e != nil {
+			e.OnACK(count)
+		}
 
-	// report acks to waiting clients
-	l.processACK(lst, count)
+		// report acks to waiting clients
+		l.processACK(lst, count)
+	}
 
 	for !lst.empty() {
 		releaseACKChan(lst.pop())
@@ -110,6 +119,7 @@ func (l *ackLoop) collectAcked() chanList {
 	lst := chanList{}
 
 	acks := l.lst.pop()
+	l.onACK(acks)
 	lst.append(acks)
 
 	done := false
@@ -117,8 +127,7 @@ func (l *ackLoop) collectAcked() chanList {
 		acks := l.lst.front()
 		select {
 		case <-acks.ch:
-			l.broker.logger.Debugf("ackloop: receive ack [%v: %v, %v]", acks.seq, acks.start, acks.count)
-			l.batchesACKed++
+			l.onACK(acks)
 			lst.append(l.lst.pop())
 
 		default:
@@ -127,4 +136,9 @@ func (l *ackLoop) collectAcked() chanList {
 	}
 
 	return lst
+}
+
+func (l *ackLoop) onACK(acks *ackChan) {
+	l.batchesACKed++
+	l.broker.logger.Debugf("ackloop: receive ack [%v: %v, %v]", acks.seq, acks.start, acks.count)
 }
